--- a/requirements.txt
+++ b/requirements.txt
@@ -2,28 +2,45 @@ appdirs==1.4.4
 autopep8==1.6.0
 beautifulsoup4==4.10.0
 bs4==0.0.1
+cachetools==5.3.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
 cssselect==1.1.0
 fake-useragent==0.1.11
 Flask==2.0.3
+google-api-core==2.11.0
+google-api-python-client==2.76.0
+google-auth==2.16.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.8.0
+googleapis-common-protos==1.58.0
+httplib2==0.21.0
 idna==3.3
 importlib-metadata==4.11.2
 itsdangerous==2.1.0
 Jinja2==3.0.3
 lxml==4.8.0
 MarkupSafe==2.1.0
+oauthlib==3.2.2
 parse==1.19.0
+protobuf==4.21.12
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pyee==8.2.2
+pyparsing==3.0.9
 pyppeteer==1.0.2
 pyquery==1.4.3
 requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
 soupsieve==2.3.1
 toml==0.10.2
 tqdm==4.63.0
+typing_extensions==4.4.0
+uritemplate==4.1.1
 urllib3==1.26.8
 w3lib==1.22.0
 websockets==10.2
